--- a/app.html
+++ b/app.html
@@ -108,7 +108,7 @@ background: -webkit-gradient(235deg, #772aff, #010615, #2196F3);}
                     <span class="neon">Modern Edge Mktg</span>
                 </div> 
                 
-                <img src="../../.bin/img/can2animate.gif" style="max-width:100%;">
+                <img src="../../../.bin/img/can2animate.gif" style="max-width:100%;">
             </div>
             <div class="content 780btn" id="diveIn">
                 <h2 style="text-align:center;">What You GET!<br><span>Creative Designer</span></h2>
@@ -119,7 +119,7 @@ background: -webkit-gradient(235deg, #772aff, #010615, #2196F3);}
         </div> 
         <div class="box" >
             <div class="imgBx">
-                <div id="softLanding" class="entranceBtn">
+                <div class="entranceBtn" id="softLanding">
                     <span class="neon">Mktg Flyover</span>
                 </div>
             </div>
@@ -145,7 +145,7 @@ background: -webkit-gradient(235deg, #772aff, #010615, #2196F3);}
     var diveIn = document.getElementById('diveIn');
 
     goSoft.addEventListener('click', function() {
-        location.href = "localhost:6969/packup/src/min4.html#softLanding";
+        location.href = "#softLanding";
     });
     
     diveIn.addEventListener('click', function() {
@@ -154,7 +154,7 @@ background: -webkit-gradient(235deg, #772aff, #010615, #2196F3);}
 </script>
 <script>
     function flyover(){
-        location.href = 'localhost:6969/packup/src/flyover-mktg/index.html';
+        location.href = "http://localhost:6969/packup/src/static/flyover-mktg/index.html";
     };
 </script>
 
