Including new Facebook Instant Articles with Development And Production environments!

--- a/app2.html
+++ b/app2.html
@@ -1,4 +1,5 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en"><head><meta property="fb:pages" content="100862241368831" />
     <title>ModernEdge Open Marketing</title>
     <meta name="description" content="CMS Modern Edge Mktg - Description">
     <meta name="keywords" content="CMS Modern Edge Mktg - Keywords">
@@ -118,8 +119,22 @@ background: -webkit-gradient(235deg, #772aff, #010615, #2196F3);}
             </div>
             <a id="goSoft" href="#softLanding">Prefer a Mktg Flyover?<br> Visit below.</a>
         </div> 
+        <div class="box">
+            <div class="imgBx">
+                <img src="DsmArea515.png" >
+            </div>
+            <div class="entranceBtn">
+                <span class="neon">Facebook Instant Articles</span>
+                <span class="neonA">Production</span>
+                <span class="neonB">Development</span>
+            </div>
+        </div>        
         <div class="box" id="softLanding" >
             <div class="imgBx">
+                <video width="320" height="240" controls>
+                    <source src="" type="video/mp4">
+                        Your browser does not support the video tag.
+                </video>
                 <div class="entranceBtn">
                     <span class="neon">Mktg Flyover</span>
                 </div>
